--- a/framework/build.gradle
+++ b/framework/build.gradle
@@ -37,6 +37,9 @@ repositories {
         dirs 'libs'
     }
     mavenCentral()
+    maven {
+        url 'https://github.com/uPhyca/stetho-realm/raw/master/maven-repo'
+    }
 }
 
 dependencies {
@@ -44,13 +47,11 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support:design:25.3.1'
     compile 'io.reactivex.rxjava2:rxjava:2.1.0'
-
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
     compile 'com.squareup.retrofit2:retrofit:2.2.0'
     compile 'com.squareup.retrofit2:converter-gson:2.2.0'
     compile 'com.squareup.retrofit2:adapter-rxjava2:2.2.0'
     compile 'com.squareup.okhttp3:logging-interceptor:3.6.0'
-
     compile 'com.tbruyelle.rxpermissions2:rxpermissions:0.9.4@aar'
     compile(name: 'router-1.0.1', ext: 'aar')
     compile(name: 'banner-release', ext: 'aar') {
@@ -59,9 +60,11 @@ dependencies {
     compile(name: 'material-dialog-release', ext: 'aar') {
         exclude group: 'com.android.support'
     }
-
     compile('it.sephiroth.android.library.bottomnavigation:bottom-navigation:2.0.1-rc1') {
         exclude group: 'com.android.support'
     }
     compile 'com.facebook.fresco:fresco:1.1.0'
+
+    compile 'com.facebook.stetho:stetho:1.5.0'
+    compile 'com.uphyca:stetho_realm:2.1.0'
 }
