--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'com.android.application'
 apply plugin: 'me.tatarka.retrolambda'
+apply plugin: 'realm-android'
 
 android {
     compileSdkVersion 25
@@ -28,12 +29,15 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+}
 
-    repositories {
-        flatDir {
-            dirs 'libs'
-            dirs project(":framework").file("libs")
-        }
+repositories {
+    flatDir {
+        dirs 'libs'
+        dirs project(":framework").file("libs")
+    }
+    maven {
+        url 'https://github.com/uPhyca/stetho-realm/raw/master/maven-repo'
     }
 }
 
