--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".example.view.view.Activity_Form"></activity>
+        <activity android:name=".example.view.view.Activity_Form" />
+        <activity android:name=".example.view.view.Activity_Realm"></activity>
     </application>
 
 </manifest>
